<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_theme"
        android:title="@string/lbl_theme"
        android:icon="@drawable/ic_day_night"
        app:showAsAction="always" />
</menu>