...
    android:id="@+id/nav_graph"
    app:startDestination="@id/moviesFragment">

    <fragment
        android:id="@+id/moviesFragment"
        android:name="com.davidbronn.movietmdb.ui.movies.MoviesFragment"
        android:label="Movies"
        tools:layout="@layout/movies_fragment">

        <action
            android:id="@+id/toDetails"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_right"
...
